# backend/internal/httpd/apispec/openapi.yaml
@@ -3098,8 +3098,12 @@ components:
       type: object
     SessionResponse:
       properties:
+        promptBytes:
+          type: integer
         session:
           $ref: '#/components/schemas/ControllersSessionView'
+        systemPromptBytes:
+          type: integer
       required:
       - session
       type: object
